--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="favicon.png">
 <meta name="theme-color" content="#1a73e8">
+
+<!-- Google Programmable Search Engine -->
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
 <style>
 html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
@@ -13,37 +17,31 @@ body{
     url('Santa.png') left center / 50% 100vh no-repeat,
     url('Santa.png') right center / 50% 100vh no-repeat;
 }
-/* MOBILE: single centered Santa */
 @media (max-width:768px){
   body { background: url('Santa.png') center center / cover no-repeat; }
 }
-/* HOME */
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
 .logo{font-size:clamp(48px,10vw,80px);font-weight:bold;text-align:center;}
-.logo span:nth-child(1){color:#4285f4} .logo span:nth-child(2){color:#ff9800} .logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4} .logo span:nth-child(5){color:#34a853} .logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05} .logo span:nth-child(8){color:#4285f4} .logo span:nth-child(9){color:#34a853}
+.logo span:nth-child(1){color:#4285f4}
+.logo span:nth-child(2){color:#ff9800}
+.logo span:nth-child(3){color:#fbbc05}
+.logo span:nth-child(4){color:#4285f4}
+.logo span:nth-child(5){color:#34a853}
+.logo span:nth-child(6){color:#ff9800}
+.logo span:nth-child(7){color:#fbbc05}
+.logo span:nth-child(8){color:#4285f4}
+.logo span:nth-child(9){color:#34a853}
 .search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-/* RESULTS */
+
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
 .topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
 .back{cursor:pointer;font-size:22px;margin-bottom:8px;}
 .tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-/* WHITE FLOATING CARDS */
-.card{background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,.08);color:#000;text-decoration:none;display:flex;flex-direction:column;gap:6px;}
-.card img{width:28px;height:28px;}
-/* GRID FOR IMAGES & VIDEOS */
+.card{background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;box-shadow:0 2px 6px rgba(0,0,0,.08);}
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;display:block;max-height:250px;}
-/* MOBILE ADJUSTMENTS */
-@media(max-width:480px){
-  .search-box{width:95%;}
-  .grid{grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:8px;}
-  .grid img{max-height:180px;}
-}
 </style>
 </head>
 
@@ -65,10 +63,8 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
   </div>
 
   <div class="tabs">
-    <div class="tab" data-tab="ai">AI Mode</div>
     <div class="tab active" data-tab="all">All</div>
     <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
     <div class="tab" data-tab="news">News</div>
     <div class="tab" data-tab="flights">Flights</div>
   </div>
@@ -77,9 +73,6 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
 let tab="all";
 const homeEl=document.getElementById("home");
 const resEl=document.getElementById("results");
@@ -87,12 +80,6 @@ const qHome=document.getElementById("qHome");
 const qTop=document.getElementById("qTop");
 const content=document.getElementById("content");
 
-/* INITIAL LOAD */
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ && startQ.trim()){ showResults(startQ); } else { history.replaceState({}, "", location.pathname); }
-
-/* START SEARCH */
 function startSearch(e){
   e.preventDefault();
   const q=qHome.value.trim();
@@ -100,39 +87,6 @@ function startSearch(e){
   history.pushState({}, "", "?q="+encodeURIComponent(q));
   showResults(q);
 }
-
-qTop.onkeydown = e => {
-  if(e.key==="Enter"){
-    e.preventDefault();
-    const q=qTop.value.trim();
-    if(!q) return;
-    history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
-  }
-};
-
-/* DEBOUNCE FUNCTION */
-function debounce(fn, delay){
-  let timer;
-  return function(...args){
-    clearTimeout(timer);
-    timer=setTimeout(()=>fn.apply(this,args), delay);
-  };
-}
-
-/* LIVE ALL TAB SEARCH */
-qTop.addEventListener('input', debounce(() => { if(tab==="all") search(); }, 300));
-
-/* TAB SWITCH */
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    if(tab==="ai"){ location.href="https://gemini.google.com"; return; }
-    search();
-  };
-});
 
 function showResults(q){
   homeEl.style.display="none";
@@ -147,74 +101,65 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
-function card(icon,text,url){
-  return `<a class="card" href="${url}" target="_blank">
-    ${icon?`<img src="${icon}">`:''}<span>${text}</span>
-  </a>`;
-}
+document.querySelectorAll(".tab").forEach(t=>{
+  t.onclick=()=>{
+    tab=t.dataset.tab;
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    search();
+  };
+});
 
-/* SEARCH FUNCTION */
 function search(){
   const q=qTop.value.trim();
   if(!q) return;
   const enc=encodeURIComponent(q);
   content.innerHTML="";
 
-  /* ALL TAB - LIVE DUCKDUCKGO RESULTS */
+  /* ALL TAB — GOOGLE PROGRAMMABLE SEARCH */
   if(tab==="all"){
-    content.innerHTML="<p>Loading results...</p>";
-    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/html/?q=' + enc)}`)
-      .then(res=>res.json())
-      .then(data=>{
-        const parser=new DOMParser();
-        const doc=parser.parseFromString(data.contents,"text/html");
-        const results=Array.from(doc.querySelectorAll('.result__body'));
-        if(results.length===0){ content.innerHTML="<p>No results found.</p>"; return; }
-        content.innerHTML=results.slice(0,10).map(r=>{
-          const titleEl=r.querySelector('.result__a');
-          const snippetEl=r.querySelector('.result__snippet');
-          const link = titleEl ? titleEl.href : "#";
-          const title = titleEl ? titleEl.textContent : "No title";
-          const snippet = snippetEl ? snippetEl.textContent : "";
-          return `<a class="card" href="${link}" target="_blank">
-                    <strong>${title}</strong>
-                    <p>${snippet}</p>
-                  </a>`;
-        }).join("");
-      })
-      .catch(err=>{ console.error(err); content.innerHTML="<p>Error loading results.</p>"; });
+    content.innerHTML = `
+      <div class="gcse-searchresults-only"
+           data-query="${enc}">
+      </div>
+    `;
   }
 
   /* IMAGES TAB */
   if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{ headers:{"Authorization":"Client-ID "+UNSPLASH}})
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-      });
-  }
-
-  /* VIDEOS TAB */
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`<a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank"><img src="${v.snippet.thumbnails.high.url}"></a>`).join("")}</div>`;
-      });
+    content.innerHTML =
+      `<div class="card">
+        <a href="https://www.google.com/search?tbm=isch&q=${enc}" target="_blank">
+          Open Google Images
+        </a>
+      </div>`;
   }
 
   /* NEWS TAB */
   if(tab==="news"){
-    content.innerHTML=
-      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
-      card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
+    content.innerHTML =
+      `<div class="card">
+        <a href="https://news.google.com/search?q=${enc}" target="_blank">
+          Google News
+        </a>
+      </div>`;
   }
 
   /* FLIGHTS TAB */
   if(tab==="flights"){
-    content.innerHTML=card(null,"Flightradar24","https://www.flightradar24.com");
+    content.innerHTML =
+      `<div class="card">
+        <a href="https://www.google.com/travel/flights" target="_blank">
+          Google Flights
+        </a>
+      </div>`;
   }
 }
+
+/* URL LOAD */
+const params=new URLSearchParams(location.search);
+const startQ=params.get("q");
+if(startQ){ showResults(startQ); }
 </script>
 </body>
 </html>
