--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="favicon.png">
+<link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1a73e8">
+
 <style>
 html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
@@ -13,27 +15,13 @@ body{
     url('Santa.png') left center / 50% 100vh no-repeat,
     url('Santa.png') right center / 50% 100vh no-repeat;
 }
-/* MOBILE: single centered Santa */
 @media (max-width:768px){
-  body { background: url('Santa.png') center center / cover no-repeat; }
+  body{background:url('Santa.png') center/cover no-repeat;}
 }
+
 /* HOME */
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-.logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-  display:inline-flex;      /* inline-flex row */
-  flex-wrap: nowrap;         /* no wrap */
-  align-items: center;
-  justify-content: center;
-  line-height:1.1;
-}
-
-.logo span{
-  display:inline-block;
-}
-
-/* COLORS */
+.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;display:inline-flex;}
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -46,29 +34,46 @@ body{
 
 .search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
+
 /* RESULTS */
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
 .topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;margin-bottom:8px;}
+.back{cursor:pointer;font-size:22px;}
 .tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-/* WHITE FLOATING CARDS */
-.card{background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,.08);color:#000;text-decoration:none;display:flex;flex-direction:column;gap:6px;}
-.card img{width:28px;height:28px;}
-/* GRID FOR IMAGES & VIDEOS */
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;display:block;max-height:250px;}
-/* MOBILE ADJUSTMENTS */
-@media(max-width:480px){
-  .search-box{width:95%;}
-  .grid{grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:8px;}
-  .grid img{max-height:180px;}
+
+.card{
+  background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  color:#000;text-decoration:none;display:flex;gap:8px;align-items:center;
 }
+.card img{width:28px;height:28px}
+
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
+.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px}
+
+/* DARK MODE */
+body.dark{background:#121212;color:#e8eaed;}
+body.dark input{background:#1e1e1e;color:#e8eaed;border:1px solid #444;}
+body.dark .card{background:#1e1e1e;color:#e8eaed;}
+body.dark .tabs{border-bottom-color:#333;}
+body.dark .tab{color:#aaa;}
+body.dark .tab.active{color:#8ab4f8;border-bottom-color:#8ab4f8;}
+
+/* TOGGLE */
+#darkToggle{
+  position:fixed;top:12px;right:12px;cursor:pointer;
+  background:#fff;border-radius:50%;padding:10px;
+  box-shadow:0 2px 6px rgba(0,0,0,.2);
+}
+body.dark #darkToggle{background:#1e1e1e;}
 </style>
 </head>
 
 <body>
+<div id="darkToggle" onclick="toggleDark()">🌙</div>
+
 <div id="home">
   <div class="logo">
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
@@ -86,7 +91,6 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
   </div>
 
   <div class="tabs">
-    
     <div class="tab active" data-tab="all">All</div>
     <div class="tab" data-tab="images">Images</div>
     <div class="tab" data-tab="videos">Videos</div>
@@ -107,13 +111,26 @@ const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
 const qTop=document.getElementById("qTop");
 const content=document.getElementById("content");
+const darkToggle=document.getElementById("darkToggle");
 
-/* INITIAL LOAD */
+/* DARK MODE LOAD */
+if(localStorage.dark==="1"){
+  document.body.classList.add("dark");
+  darkToggle.textContent="☀️";
+}
+function toggleDark(){
+  document.body.classList.toggle("dark");
+  const on=document.body.classList.contains("dark");
+  darkToggle.textContent=on?"☀️":"🌙";
+  localStorage.dark=on?"1":"0";
+}
+
+/* HANDLE ?q= ON RELOAD */
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
-if(startQ && startQ.trim()){ showResults(startQ); } else { history.replaceState({}, "", location.pathname); }
+if(startQ && startQ.trim()){ showResults(startQ); }
 
-/* START SEARCH */
+/* SEARCH */
 function startSearch(e){
   e.preventDefault();
   const q=qHome.value.trim();
@@ -121,52 +138,29 @@ function startSearch(e){
   history.pushState({}, "", "?q="+encodeURIComponent(q));
   showResults(q);
 }
-
-qTop.onkeydown = e => {
-  if(e.key==="Enter"){
-    e.preventDefault();
-    const q=qTop.value.trim();
-    if(!q) return;
-    history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
-  }
-};
-
-/* DEBOUNCE FUNCTION */
-function debounce(fn, delay){
-  let timer;
-  return function(...args){
-    clearTimeout(timer);
-    timer=setTimeout(()=>fn.apply(this,args), delay);
-  };
-}
-
-/* LIVE ALL TAB SEARCH */
-qTop.addEventListener('input', debounce(() => { if(tab==="all") search(); }, 300));
-
-/* TAB SWITCH */
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    
-    search();
-  };
-});
-
 function showResults(q){
   homeEl.style.display="none";
   resEl.style.display="block";
   qTop.value=q;
   search();
 }
-
 function goHome(){
   history.replaceState({}, "", location.pathname);
   resEl.style.display="none";
   homeEl.style.display="flex";
 }
+qTop.onkeydown=e=>{
+  if(e.key==="Enter"){ e.preventDefault(); search(); }
+};
+
+document.querySelectorAll(".tab").forEach(t=>{
+  t.onclick=()=>{
+    tab=t.dataset.tab;
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    search();
+  };
+});
 
 function card(icon,text,url){
   return `<a class="card" href="${url}" target="_blank">
@@ -174,66 +168,55 @@ function card(icon,text,url){
   </a>`;
 }
 
-/* SEARCH FUNCTION */
 function search(){
   const q=qTop.value.trim();
   if(!q) return;
   const enc=encodeURIComponent(q);
   content.innerHTML="";
 
-  /* ALL TAB - LIVE DUCKDUCKGO RESULTS */
   if(tab==="all"){
     content.innerHTML="<p>Loading results...</p>";
-    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/html/?q=' + enc)}`)
-      .then(res=>res.json())
-      .then(data=>{
-        const parser=new DOMParser();
-        const doc=parser.parseFromString(data.contents,"text/html");
-        const results=Array.from(doc.querySelectorAll('.result__body'));
-        if(results.length===0){ content.innerHTML="<p>No results found.</p>"; return; }
-        content.innerHTML=results.slice(0,10).map(r=>{
-          const titleEl=r.querySelector('.result__a');
-          const snippetEl=r.querySelector('.result__snippet');
-          const link = titleEl ? titleEl.href : "#";
-          const title = titleEl ? titleEl.textContent : "No title";
-          const snippet = snippetEl ? snippetEl.textContent : "";
-          return `<a class="card" href="${link}" target="_blank">
-                    <strong>${title}</strong>
-                    <p>${snippet}</p>
-                  </a>`;
-        }).join("");
-      })
-      .catch(err=>{ console.error(err); content.innerHTML="<p>Error loading results.</p>"; });
-  }
-
-  /* IMAGES TAB */
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{ headers:{"Authorization":"Client-ID "+UNSPLASH}})
+    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/html/?q='+enc)}`)
       .then(r=>r.json())
       .then(d=>{
-        content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+        const doc=new DOMParser().parseFromString(d.contents,"text/html");
+        const res=[...doc.querySelectorAll(".result__body")].slice(0,10);
+        content.innerHTML=res.map(r=>{
+          const a=r.querySelector(".result__a");
+          const s=r.querySelector(".result__snippet");
+          return `<a class="card" href="${a.href}" target="_blank">
+            <strong>${a.textContent}</strong><p>${s?.textContent||""}</p>
+          </a>`;
+        }).join("");
       });
   }
 
-  /* VIDEOS TAB */
+  if(tab==="images"){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+      headers:{Authorization:"Client-ID "+UNSPLASH}
+    }).then(r=>r.json()).then(d=>{
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+    });
+  }
+
   if(tab==="videos"){
     fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`<a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank"><img src="${v.snippet.thumbnails.high.url}"></a>`).join("")}</div>`;
+      .then(r=>r.json()).then(d=>{
+        content.innerHTML=`<div class="grid">${d.items.map(v=>
+          `<a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
+            <img src="${v.snippet.thumbnails.high.url}">
+          </a>`).join("")}</div>`;
       });
   }
 
-  /* NEWS TAB */
   if(tab==="news"){
-    content.innerHTML=
-      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
+    content.innerHTML =
+      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`) +
       card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
   }
 
-  /* FLIGHTS TAB */
   if(tab==="flights"){
-    content.innerHTML=card(null,"Flightradar24","https://www.flightradar24.com");
+    content.innerHTML = card(null,"Flightradar24","https://www.flightradar24.com");
   }
 }
 </script>
