--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="icon" href="favicon.png">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1a73e8">
@@ -16,12 +17,21 @@ body{
     url('Santa.png') right center / 50% 100vh no-repeat;
 }
 @media (max-width:768px){
-  body{background:url('Santa.png') center/cover no-repeat;}
+  body{background:url('Santa.png') center center / cover no-repeat;}
 }
 
-/* HOME */
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;display:inline-flex;}
+
+.logo{
+  font-size:clamp(48px,10vw,80px);
+  font-weight:bold;
+  display:inline-flex;
+  flex-wrap:nowrap;
+  align-items:center;
+  justify-content:center;
+  line-height:1.1;
+}
+.logo span{display:inline-block;}
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -35,44 +45,52 @@ body{
 .search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
-/* RESULTS */
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
 .topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;}
+.back{cursor:pointer;font-size:22px;margin-bottom:8px;}
+
 .tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
 
 .card{
-  background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;
+  background:#fff;
+  border-radius:12px;
+  padding:14px 16px;
+  margin:12px 0;
+  cursor:pointer;
   box-shadow:0 2px 6px rgba(0,0,0,.08);
-  color:#000;text-decoration:none;display:flex;gap:8px;align-items:center;
+  color:#000;
+  text-decoration:none;
+  display:flex;
+  flex-direction:column;
+  gap:6px;
 }
-.card img{width:28px;height:28px}
 
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px}
+.card img{width:28px;height:28px;}
 
-/* DARK MODE */
-body.dark{background:#121212;color:#e8eaed;}
-body.dark input{background:#1e1e1e;color:#e8eaed;border:1px solid #444;}
-body.dark .card{background:#1e1e1e;color:#e8eaed;}
-body.dark .tabs{border-bottom-color:#333;}
-body.dark .tab{color:#aaa;}
-body.dark .tab.active{color:#8ab4f8;border-bottom-color:#8ab4f8;}
-
-/* TOGGLE */
-#darkToggle{
-  position:fixed;top:12px;right:12px;cursor:pointer;
-  background:#fff;border-radius:50%;padding:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,.2);
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:12px;
 }
-body.dark #darkToggle{background:#1e1e1e;}
+.grid img{
+  width:100%;
+  aspect-ratio:16/9;
+  object-fit:cover;
+  border-radius:8px;
+  max-height:250px;
+}
+
+@media(max-width:480px){
+  .search-box{width:95%;}
+  .grid{grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:8px;}
+  .grid img{max-height:180px;}
+}
 </style>
 </head>
 
 <body>
-<div id="darkToggle" onclick="toggleDark()">🌙</div>
 
 <div id="home">
   <div class="logo">
@@ -111,26 +129,13 @@ const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
 const qTop=document.getElementById("qTop");
 const content=document.getElementById("content");
-const darkToggle=document.getElementById("darkToggle");
 
-/* DARK MODE LOAD */
-if(localStorage.dark==="1"){
-  document.body.classList.add("dark");
-  darkToggle.textContent="☀️";
-}
-function toggleDark(){
-  document.body.classList.toggle("dark");
-  const on=document.body.classList.contains("dark");
-  darkToggle.textContent=on?"☀️":"🌙";
-  localStorage.dark=on?"1":"0";
-}
-
-/* HANDLE ?q= ON RELOAD */
+/* URL LOAD */
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
-if(startQ && startQ.trim()){ showResults(startQ); }
+if(startQ && startQ.trim()){showResults(startQ);}
+else{history.replaceState({}, "", location.pathname);}
 
-/* SEARCH */
 function startSearch(e){
   e.preventDefault();
   const q=qHome.value.trim();
@@ -138,19 +143,15 @@ function startSearch(e){
   history.pushState({}, "", "?q="+encodeURIComponent(q));
   showResults(q);
 }
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
-}
-function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
-}
+
 qTop.onkeydown=e=>{
-  if(e.key==="Enter"){ e.preventDefault(); search(); }
+  if(e.key==="Enter"){
+    e.preventDefault();
+    const q=qTop.value.trim();
+    if(!q) return;
+    history.pushState({}, "", "?q="+encodeURIComponent(q));
+    search();
+  }
 };
 
 document.querySelectorAll(".tab").forEach(t=>{
@@ -162,6 +163,19 @@ document.querySelectorAll(".tab").forEach(t=>{
   };
 });
 
+function showResults(q){
+  homeEl.style.display="none";
+  resEl.style.display="block";
+  qTop.value=q;
+  search();
+}
+
+function goHome(){
+  history.replaceState({}, "", location.pathname);
+  resEl.style.display="none";
+  homeEl.style.display="flex";
+}
+
 function card(icon,text,url){
   return `<a class="card" href="${url}" target="_blank">
     ${icon?`<img src="${icon}">`:''}<span>${text}</span>
@@ -172,53 +186,60 @@ function search(){
   const q=qTop.value.trim();
   if(!q) return;
   const enc=encodeURIComponent(q);
-  content.innerHTML="";
+  content.innerHTML="<p>Loading results...</p>";
 
   if(tab==="all"){
-    content.innerHTML="<p>Loading results...</p>";
-    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/lite/?q='+enc)}`)
+    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/html/?q='+enc)}`)
       .then(r=>r.json())
       .then(d=>{
         const doc=new DOMParser().parseFromString(d.contents,"text/html");
-        const res=[...doc.querySelectorAll(".result__body")].slice(0,10);
-        content.innerHTML=res.map(r=>{
-          const a=r.querySelector(".result__a");
-          const s=r.querySelector(".result__snippet");
+        const results=[...doc.querySelectorAll('.result__body')];
+        if(!results.length){content.innerHTML="<p>No results found.</p>";return;}
+        content.innerHTML=results.slice(0,10).map(r=>{
+          const a=r.querySelector('.result__a');
+          const s=r.querySelector('.result__snippet');
           return `<a class="card" href="${a.href}" target="_blank">
-            <strong>${a.textContent}</strong><p>${s?.textContent||""}</p>
+            <strong>${a.textContent}</strong>
+            <p>${s?s.textContent:""}</p>
           </a>`;
         }).join("");
-      });
+      })
+      .catch(()=>content.innerHTML="<p>Error loading results.</p>");
   }
 
   if(tab==="images"){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
       headers:{Authorization:"Client-ID "+UNSPLASH}
-    }).then(r=>r.json()).then(d=>{
+    })
+    .then(r=>r.json())
+    .then(d=>{
       content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
     });
   }
 
   if(tab==="videos"){
     fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json()).then(d=>{
+      .then(r=>r.json())
+      .then(d=>{
         content.innerHTML=`<div class="grid">${d.items.map(v=>
           `<a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
             <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
+          </a>`
+        ).join("")}</div>`;
       });
   }
 
   if(tab==="news"){
-    content.innerHTML =
-      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`) +
+    content.innerHTML=
+      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
       card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
   }
 
   if(tab==="flights"){
-    content.innerHTML = card(null,"Flightradar24","https://www.flightradar24.com");
+    content.innerHTML=card(null,"Flightradar24","https://www.flightradar24.com");
   }
 }
 </script>
+
 </body>
 </html>
