--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self';">
+<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="favicon.png">
 
