--- a/index.html
+++ b/index.html
@@ -202,24 +202,16 @@ function search(){
   const enc=encodeURIComponent(q);
   content.innerHTML="<p>Loading results...</p>";
 
-  if(tab==="all"){
-    fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://duckduckgo.com/html/?q='+enc)}`)
-      .then(r=>r.json())
-      .then(d=>{
-        const doc=new DOMParser().parseFromString(d.contents,"text/html");
-        const results=[...doc.querySelectorAll('.result__body')];
-        if(!results.length){content.innerHTML="<p>No results found.</p>";return;}
-        content.innerHTML=results.slice(0,10).map(r=>{
-          const a=r.querySelector('.result__a');
-          const s=r.querySelector('.result__snippet');
-          return `<a class="card" href="${a.href}" target="_blank">
-            <strong>${a.textContent}</strong>
-            <p>${s?s.textContent:""}</p>
-          </a>`;
-        }).join("");
-      })
-      .catch(()=>content.innerHTML="<p>Error loading results.</p>");
-  }
+ if(tab==="all"){
+  content.innerHTML = `
+    <iframe
+      src="https://cse.google.com/cse?cx=949e339dabb3b4e60&q=${enc}"
+      style="width:100%;height:85vh;border:none;border-radius:12px;background:white;"
+      loading="lazy">
+    </iframe>
+  `;
+}
+
 
   if(tab==="images"){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
