--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+<meta charset="UTF-8"
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="favicon.png">
 
