--- a/index.html
+++ b/index.html
@@ -203,12 +203,17 @@ function search(){
 
  if(tab==="all"){
   content.innerHTML = `
-    <iframe
-      src="https://cse.google.com/cse?cx=949e339dabb3b4e60&q=${enc}"
-      style="width:100%;height:85vh;border:none;border-radius:12px;background:white;"
-      loading="lazy">
-    </iframe>
+    <div id="gcs-container"></div>
   `;
+
+  if(!window.__gcsLoaded){
+    window.__gcsLoaded = true;
+
+    const s = document.createElement("script");
+    s.async = true;
+    s.src = "https://cse.google.com/cse.js?cx=949e339dabb3b4e60";
+    document.head.appendChild(s);
+  }
 }
 
 
