--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 <meta charset="UTF-8">
 
+<title>Searchmas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#1a73e8">
 
 <script>
 (function(){
@@ -13,13 +17,6 @@
   }
 })();
 </script>
-
-<title>Searchmas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
-
-<!-- GOOGLE CSE -->
-<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
 html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
@@ -37,9 +34,10 @@ body{
 .logo{
   font-size:clamp(48px,10vw,80px);
   font-weight:bold;
-  display:inline-flex;
-  line-height:1.1;
+  display:flex;
+  gap:2px;
 }
+
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -53,25 +51,42 @@ body{
 .search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
+#results{display:none;max-width:1200px;margin:auto;padding:15px;min-height:100vh;}
+.topbar{display:flex;gap:12px;align-items:center;}
 .back{cursor:pointer;font-size:22px;}
 
 .tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
 
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:12px;
+/* ===== Kill Google CSE Shell UI ===== */
+
+.gsc-control-cse,
+.gsc-tabsArea,
+.gsc-above-wrapper-area,
+.gsc-refinementsArea,
+.gsc-adBlock,
+.gcsc-branding,
+.gsc-result-info,
+.gsc-orderby,
+.gsc-clear-button,
+.gsc-thumbnail-inside,
+.gsc-url-top,
+.gsc-url-bottom,
+.gsc-expansionArea{
+  display:none !important;
 }
-.grid img{
-  width:100%;
-  aspect-ratio:16/9;
-  object-fit:cover;
-  border-radius:8px;
+
+/* Make results clean cards */
+
+.gs-webResult.gs-result{
+  background:white;
+  border-radius:12px;
+  padding:14px 16px;
+  margin:12px 0;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
 }
+
 </style>
 </head>
 
@@ -82,6 +97,7 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
     <span>h</span><span>m</span><span>a</span><span>s</span>
   </div>
+
   <form class="search-box" onsubmit="startSearch(event)">
     <input id="qHome" placeholder="Search the web">
   </form>
@@ -104,9 +120,6 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
 let tab="all";
 
 const homeEl=document.getElementById("home");
@@ -114,11 +127,6 @@ const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
 const qTop=document.getElementById("qTop");
 const content=document.getElementById("content");
-
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-
-if(startQ && startQ.trim()) showResults(startQ);
 
 function startSearch(e){
   e.preventDefault();
@@ -165,46 +173,38 @@ function search(){
   if(!q) return;
 
   if(tab==="all"){
-    content.innerHTML = `<div class="gcse-searchresults-only"></div>`;
-    waitForCSE(q);
-  }
+    content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
 
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-  }
+    if(!window.__gcsLoaded){
+      window.__gcsLoaded=true;
+      const s=document.createElement("script");
+      s.async=true;
+      s.src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60";
+      document.head.appendChild(s);
+    }
 
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q)}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
+    runCSE(q);
   }
 
   if(tab==="news"){
-    content.innerHTML =
-      `<a href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News</a>`;
+    content.innerHTML=`
+      <a class="card" href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News</a>
+      <a class="card" href="https://www.bing.com/news/search?q=${encodeURIComponent(q)}" target="_blank">Bing News</a>
+    `;
   }
 }
 
-function waitForCSE(q){
+function runCSE(q){
   try{
     if(window.google && google.search && google.search.cse){
-      google.search.cse.element.getElement('searchresults-only0').execute(q);
+      const el=google.search.cse.element.getElement('searchresults-only0');
+      if(el) el.execute(q);
+      else setTimeout(()=>runCSE(q),200);
     }else{
-      setTimeout(()=>waitForCSE(q),300);
+      setTimeout(()=>runCSE(q),200);
     }
   }catch(e){
-    setTimeout(()=>waitForCSE(q),300);
+    setTimeout(()=>runCSE(q),200);
   }
 }
 </script>
