--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@ body{
 @media (max-width:768px){
   body{background:url('Santa.png') center center / cover no-repeat;}
 }
+
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;display:inline-flex;}
+
+.logo{
+  font-size:clamp(48px,10vw,80px);
+  font-weight:bold;
+  display:inline-flex;
+}
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -42,16 +48,44 @@ body{
 .logo span:nth-child(7){color:#fbbc05}
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
+
 .search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
+
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
 .topbar{display:flex;gap:12px;align-items:center;}
 .back{cursor:pointer;font-size:22px;}
+
 .tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
+
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
 .grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
+
+.card{
+  background:#fff;
+  border-radius:12px;
+  padding:14px 16px;
+  margin:12px 0;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  color:#000;
+  text-decoration:none;
+}
+
+/* Google PSE UI kill */
+.gsc-control-cse,
+.gsc-control-cse *{
+  background:transparent !important;
+  border:none !important;
+  box-shadow:none !important;
+}
+.gsc-above-wrapper-area,
+.gsc-tabsArea,
+.gsc-adBlock,
+.gcsc-find-more-on-google{
+  display:none !important;
+}
 </style>
 </head>
 
@@ -96,8 +130,7 @@ const content=document.getElementById("content");
 
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
-if(startQ && startQ.trim()){showResults(startQ);}
-else{history.replaceState({}, "", location.pathname);}
+if(startQ && startQ.trim()) showResults(startQ);
 
 function startSearch(e){
   e.preventDefault();
