--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@ function search(){
     content.innerHTML=`
       <div class="news-col">
 
-        <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">
+        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
           <img src="https://google.com/favicon.ico" width="32" height="32">
           <div>
             <div style="font-size:18px;font-weight:600;">Google News</div>
-            <div style="font-size:14px;color:#5f6368;">Search news on Google</div>
+
           </div>
         </a>
 
@@ -211,7 +211,7 @@ function search(){
           <img src="https://bing.com/favicon.ico" width="32" height="32">
           <div>
             <div style="font-size:18px;font-weight:600;">Bing News</div>
-            <div style="font-size:14px;color:#5f6368;">Search news on Bing</div>
+
           </div>
         </a>
 
